2009-09-17  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (source-location): Emacs buffers start at 1,
	whereas CL files start at 0 (Tobias Rittweiler).

2009-09-16  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (documentation-symbol): Return more readable information.

2009-09-14  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (source-location): Fix typo.

2009-09-12  Mark Evenson  <evenson@panix.com>

	Provided by Alan Ruttenberg.

	* swank-abcl.lisp (source-location): Make edit definition work.

	* swank-abcl.lisp (arglist): Now works with generic functions.


2009-09-08  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (lisp-version-string): Include "-ics" for
	version with extended charsets.  Suggested by Scott L. Burson.

2009-09-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-net-close): set-process-query-on-exit-flag
	doesn't exist in XEmacs.
	(slime-make-net-buffer): For now, disable querying here.
	Could also close the socket before killing the buffer.
	(slime-buffer-processes): Deleted.

2009-09-02  Stas Boukarev  <stassats@gmail.com>

	* swank-lispworks.lisp (replace-strings-with-symbols): New function for
	recursively interning and replacing strings in a list.
	(arglist): Replace all strings in arglists with symbols.

	* slime.el (slime-net-close): Do not query for process killing
	confirmation before killing a connection buffer.
	(slime-buffer-processes): New function for listing processes
	associated with a buffer.

2009-08-31  Helmut Eller  <heller@common-lisp.net>

	Don't advice ccl::break-loop.
	Should not be necessary as we can now use ccl:*break-hook*.

	* swank-ccl.lisp ([advice] ccl::break-loop): Deleted.

2009-08-31  Helmut Eller  <heller@common-lisp.net>

	Keep note overlays in a global variable.
	That's simpler and cheaper than scanning all buffers.

	* slime.el (slime-note-overlays): New variable.
	(slime-make-note-overlay, slime-remove-old-overlays): Use it.
